--- a/core/index.html
+++ b/core/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.3814"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.4544"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -29,6 +29,7 @@
 <a href="/dove/core/preview.html">Preview</a>
 <a href="/dove/core/legacy.html">Legacy</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
+
 <a href="/dove/core/">Home</a>
 <a href="/dove/core/page.html">Page</a>
 <a href="/dove/core/404.html">404</a>
@@ -45,7 +46,10 @@
               <p>
 <a href="/">Techie Joe</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
+
 <a href="/dove">Dove</a>
+<i class="_icon"><i class="itext">&bull;</i></i>
+<b>Core</b>
               </p>
               <p class="text-right text-gray"><small>
                   This site is open source.
@@ -68,6 +72,6 @@
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.3814"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.4544"></script>
   </body>
 </html>
