--- a/nova/preview.html
+++ b/nova/preview.html
@@ -8,9 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.3816"/>
-    <link id="_style_nova" rel="stylesheet" href="/dove/assets/nova/css/nova.css?v=0.0.2.3816"/>
-    <link id="_style_basic" rel="stylesheet" href="/dove/assets/nova/css/basic.css?v=0.0.2.3816"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.4545"/>
+    <link id="_style_nova" rel="stylesheet" href="/dove/assets/nova/css/nova.css?v=0.0.2.4545"/>
+    <link id="_style_basic" rel="stylesheet" href="/dove/assets/nova/css/basic.css?v=0.0.2.4545"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -40,6 +40,7 @@
 <a href="/dove/nova/preview.html">Preview</a>
 <a href="/dove/nova/legacy.html">Legacy</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
+
 <a href="/dove/nova/">Home</a>
 <a href="/dove/nova/page.html">Page</a>
 <a href="/dove/nova/404.html">404</a>
@@ -473,7 +474,10 @@ with 2 space or 4 space indentation. <a href="#fnref:3" class="reversefootnote" 
             <p>
 <a href="/">Techie Joe</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
+
 <a href="/dove">Dove</a>
+<i class="_icon"><i class="itext">&bull;</i></i>
+<b>Nova</b>
             </p>
             <p class="text-right text-gray"><small>
                 This site is open source.
@@ -487,6 +491,6 @@ with 2 space or 4 space indentation. <a href="#fnref:3" class="reversefootnote" 
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.3816"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.4545"></script>
   </body>
 </html>
