--- a/prime/index.html
+++ b/prime/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style_prime" rel="stylesheet" href="/dove/assets/prime/css/style.css?v=0.0.2.3816"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style_prime" rel="stylesheet" href="/dove/assets/prime/css/style.css?v=0.0.2.4545"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -25,6 +25,7 @@
 <a href="/dove/prime/preview.html">Preview</a>
 <a href="/dove/prime/legacy.html">Legacy</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
+
 <a href="/dove/prime/">Home</a>
 <a href="/dove/prime/page.html">Page</a>
 <a href="/dove/prime/404.html">404</a>
@@ -43,7 +44,10 @@
                   <p>
 <a href="/">Techie Joe</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
+
 <a href="/dove">Dove</a>
+<i class="_icon"><i class="itext">&bull;</i></i>
+<b>Prime</b>
                   </p>
                 </div>
                 <div class="border-top border-gray-light pt-3">
@@ -70,6 +74,6 @@
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.3816"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.4545"></script>
   </body>
 </html>
