--- a/prime/legacy.html
+++ b/prime/legacy.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style_prime" rel="stylesheet" href="/dove/assets/prime/css/style.css?v=0.0.2.4545"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style_prime" rel="stylesheet" href="/dove/assets/prime/css/style.css?v=0.0.2.5115"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -202,7 +202,7 @@
               <div class="_layout">
                 <div class="footer border-top border-gray-light mt-5 pt-3">
                   <p>
-<a href="/">Techie Joe</a>
+<a href="https://techiejoe.github.io">Techie Joe</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
 
 <a href="/dove">Dove</a>
@@ -234,6 +234,6 @@
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.4545"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.5115"></script>
   </body>
 </html>
