--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/prime/css/style.css?v=0.0.2.1710"/>
+    <link id="_style" rel="stylesheet" href="/dove/assets/prime/css/style.css?v=0.0.2.6502"/>
     <style>._nav { display:none !important }</style>
     <style>h1.hero { font-family: 'Arial',system-ui,sans-serif }</style><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
@@ -89,8 +89,8 @@
                   </ul>
                 </nav>
                 <pre class="scrollable">source   : <a class="_no_u" href="https://github.com/techie-joe/dove" target="_edit">techie-joe/dove</a>
-version  : 0.0.2.1710
-revision : 33.1710
+version  : 0.0.2.6502
+revision : 33.6502
 site_url : <a class="_no_u" href="/dove">/dove</a>
 home_url : <a class="_no_u" href="/dove">/dove</a>
 ghost                : bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv
@@ -100,12 +100,12 @@ cloudflare_analytics : (undefined)</pre>
             </main>
             <footer class="_footer footer mt-5">
               <div class="_layout">
-                <div class="border-top border-gray-light pt-3">
-                  <p><b>Techie Joe's</b>
+                <hr class="thin border-gray-light"/>
+                <p><b>Techie Joe's</b>
 <i class="_icon"><i class="isvg">
-                        <svg viewBox="0 0 24 24">
-                          <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                        </svg></i></i>
+                      <svg viewBox="0 0 24 24">
+                        <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                      </svg></i></i>
 <a href="https://techie-joe.github.io">Website</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
 
@@ -113,13 +113,11 @@ cloudflare_analytics : (undefined)</pre>
 <i class="_icon"><i class="itext">&bull;</i></i>
 
 <a href="/nova/site/themejs">ThemeJs</a>
-                  </p>
-                </div>
-                <div class="border-top border-gray-light pt-3">
-                  <p class="text-right text-grey"><small>
-                      This site is open source.
-                      <a href="https://github.com/techie-joe/dove/edit/main/_pugs/index.html.pug" target="_edit">Improve this page</a>.</small></p>
-                </div>
+                </p>
+                <hr class="thin border-gray-light"/>
+                <p class="text-right text-grey"><small>
+                    This site is open source.
+                    <a href="https://github.com/techie-joe/dove/edit/main/_pugs/index.html.pug" target="_edit">Improve this page</a>.</small></p>
               </div>
             </footer>
           </div>
@@ -139,6 +137,6 @@ cloudflare_analytics : (undefined)</pre>
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.1710"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.6502"></script>
   </body>
 </html>
