--- a/prime/index.html
+++ b/prime/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/prime/css/style.css?v=0.0.2.1711"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/prime/css/style.css?v=0.0.2.6504"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -42,14 +42,12 @@
             </main>
             <footer class="_footer footer mt-5">
               <div class="_layout">
-                <div class="border-top border-gray-light pt-3">
-                  <p><code>// footer</code></p>
-                </div>
-                <div class="border-top border-gray-light pt-3">
-                  <p class="text-right text-grey"><small>
-                      This site is open source.
-                      <a href="https://github.com/techie-joe/dove/edit/main/_pugs/prime/index.html.pug" target="_edit">Improve this page</a>.</small></p>
-                </div>
+                <hr class="thin border-gray-light"/>
+                <p><code>// footer</code></p>
+                <hr class="thin border-gray-light"/>
+                <p class="text-right text-grey"><small>
+                    This site is open source.
+                    <a href="https://github.com/techie-joe/dove/edit/main/_pugs/prime/index.html.pug" target="_edit">Improve this page</a>.</small></p>
               </div>
             </footer>
           </div>
@@ -69,6 +67,6 @@
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.1711"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.6504"></script>
   </body>
 </html>
