--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/prime/css/style.css?v=0.0.2.6502"/>
+    <link id="_style" rel="stylesheet" href="/dove/assets/prime/css/style.css?v=0.0.2.1735"/>
     <style>._nav { display:none !important }</style>
     <style>h1.hero { font-family: 'Arial',system-ui,sans-serif }</style><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
@@ -88,14 +88,15 @@
                     </li>
                   </ul>
                 </nav>
-                <pre class="scrollable">source   : <a class="_no_u" href="https://github.com/techie-joe/dove" target="_edit">techie-joe/dove</a>
-version  : 0.0.2.6502
-revision : 33.6502
-site_url : <a class="_no_u" href="/dove">/dove</a>
-home_url : <a class="_no_u" href="/dove">/dove</a>
-ghost                : bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv
-google_analytics     : (undefined)
-cloudflare_analytics : (undefined)</pre>
+                <pre class="scrollable"><b class="text-gray"># _config.pug</b>
+  source   : <a class="_no_u" href="https://github.com/techie-joe/dove" target="_edit">techie-joe/dove</a>
+  version  : 0.0.2.1735
+  revision : 33.1735
+  site_url : <a class="_no_u" href="/dove">/dove</a>
+  home_url : <a class="_no_u" href="/dove">/dove</a>
+  ghost                : bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv
+  google_analytics     : (undefined)
+  cloudflare_analytics : (undefined)</pre>
               </article>
             </main>
             <footer class="_footer footer mt-5">
@@ -137,6 +138,6 @@ cloudflare_analytics : (undefined)</pre>
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.6502"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.1735"></script>
   </body>
 </html>
